corrigé quelques petites erreurs dans mdpoublie et les versions fxml